--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_flutter_charts: ^20.3.52
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
