--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+# Google Services (e.g. Firebase)
+google-services.json
