--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.3.52
   image_picker: ^0.8.6
   google_sign_in: ^5.4.2
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
